# amandus

./: .clang-format  .gitignore  AUTHORS  CMakeLists.txt  CTestTestfile.cmake  LICENSE  LICENSE.md  README.md  ac_01.cc  adaptivity.h  allen_cahn_stat.h  amandus.cc  amandus.h  amandus_arpack.h  amandus_parameters.cc  amandus_sparse.cc  amandus_sparse_multigrid.cc  apps.h  bitbucket-pipelines.yml  cc_01.cc  curl_curl.h  da_01n.cc  darcy_polynomial.h  ds_01.cc  integrator.h  la_01n.cc  laplace_polynomial.h  matrix_allen_cahn.h  matrix_curl_curl.h  matrix_darcy.h  matrix_darcy_stokes.h  matrix_laplace.h  matrix_stokes.h  nuke.sh  refine_strategy.h  residual_darcy_01.cc  rhs_one.h  st_01.cc  st_01n.cc  stokes_polynomial.h  (+1 more)
advection/: matrix.h  parameters.input  polynomial.h  polynomial_01.cc  polynomial_01.prm  residual.h
advection-diffusion/: boundary_values.h  matrix.h  matrix_deal.h  parameters.h  parameters.input  polynomial_01.cc  polynomial_01.prm  polynomial_boundary.h
advection-diffusion/doc/: doc.h
advection/doc/: doc.h
allen_cahn/: CMakeLists.txt  allen_cahn.cc  allen_cahn.prm  explicit.h  implicit.h  matrix.h  parameters.input  polynomial.cc  polynomial.h  polynomial.prm  polynomial.prm.cmake_template  residual.h
allen_cahn/doc/: doc.h
biot/: barry_mercer.h  barry_mercer_sine.cc  barry_mercer_sine.prm  barry_mercer_test.cc  biot.cc  biot.h  biot.prm  matrix.h  parameters.input  polynomial.h  polynomial_01.cc  polynomial_01.prm  polynomial_11.cc  polynomial_21.cc  residual.h
brinkman/: matrix.h  parameters.h
brusselator/: CMakeLists.txt  brusselator.cc  brusselator.prm  explicit.h  implicit.h  matrix.h  ode.cc  ode.h  parameters.h
brusselator/doc/: doc.h
cahn_hilliard/: CMakeLists.txt  cahn_hilliard.cc  cahn_hilliard.prm  massout.h  matrix.h  polynomial.cc  polynomial.prm  polynomial.prm.cmake_template  residual.h  samples.h
cahn_hilliard/doc/: doc.h
cmake/: Config.cmake.in
darcy/: coefficient_integrators.h  coefficient_parameters.h  constrained_newton.h  darcy.cc  estimator.h  integrators.h  matrix.h  noforce.h  polynomial.cc  polynomial.h  polynomial.prm  solution_parameters.h
darcy/checkerboard/: constrained_newton.h  solution.h  solution_parameters.h
darcy/doc/: doc.h
darcy/polynomial/: matrix.h  noforce.h  polynomial.h
debug/: visualize_solution.h
doc/: CMakeLists.txt  groups.h  main.h  options.dox  options.dox.in
elasticity/: CMakeLists.txt  eigen.cc  eigen.h  eigen.prm  elasticity.cc  elasticity.prm  integrators.h  matrix.h  matrix_integrators.h  parameters.input  polynomial.h  polynomial_01.cc  polynomial_01.prm  polynomial_02.cc  polynomial_02.prm  residual.h  stalactite.cc  test_matrix.cc
elasticity/doc/: doc.h
examples/darcy/: CMakeLists.txt  darcy.cc
heat/: RHS_heat.h  conductivity.h  eigen.cc  eigen_adaptive.cc  eigen_adaptive.prm  eigen_adaptive_multiple.cc  eigen_adaptive_multiple.prm  heat.cc  heat.h  heat.prm  heat_solution.cc  heat_solution.h  heat_solution.prm  laplace.prm  matrix.h  matrix_factor.h  matrix_heat.h  noforce.h  parameters.input  polynomial.cc  polynomial_inhom.cc  polynomial_inhom.prm  polynomial_inhom_nested.cc  polynomial_nested.cc  polynomial_nested.prm  readme.h  residual.h  rhs.h  rhs_one.h  solution.cc  solution.h  solution.prm  solution_inhom.cc  testing.h
heat/doc/: doc.h
heat/templates/: noforce.h  rhs_one.h  solution.h
laplace/: eigen.cc  eigen.h  eigen.prm  eigen_adaptive.cc  eigen_adaptive.prm  eigen_adaptive_multiple.cc  l-shaped.cc  laplace.cc  matrix.h  matrix_factor.h  noforce.h  parameters.input  polynomial.cc  polynomial.h  polynomial.prm  polynomial_inhom.cc  polynomial_inhom.prm  polynomial_inhom_nested.cc  polynomial_nested.cc  readme.h  solution.cc  solution.h  solution_inhom.cc  solution_inhom.prm  theta_residual.h
lotkavolterra/: parameters.input
maxwell/: CMakeLists.txt  div_curl.cc  eigen.cc  eigen.h  eigen.prm  matrix.h
maxwell/doc/: doc.h
readiff/: CMakeLists.txt  matrix.h  parameters.input  rd.cc  rd.prm  rd_bruss.cc  rd_bruss.prm  residual.h
readiff/doc/: doc.h
schroedinger/: coulomb.cc  coulomb.h  coulomb.prm  logarithmic.cc  logarithmic.h  logarithmic.prm  parameters.input  single.cc  single.h  single.prm
scripts/: eigenvalues.pl  make_parameters.pl  nuke.sh
stokes/: eigen.cc  eigen.h  eigen.prm  function.h  l-shaped.cc  l-shaped.prm  matrix.h  noforce.h  parameters.input  polynomial.cc  polynomial.h  polynomial.prm  solution.cc  solution.h  solution.prm
stokes/doc/: doc.h
template_cmake/: CMakeLists.txt  eigen.prm  hello_main.cc  hello_main.prm  parameters.input  polynomial.prm  readme.txt
template_cmake/include/: hello.h  parameters.h  polynomial.h
template_cmake/source/: eigen.cc  hello.cc  laplace.cc
testing/: CMakeLists.txt  CTestTestfile.cmake
testing/darcy/: CMakeLists.txt  CTestTestfile.cmake  darcy.cc  darcy_checkerboard.cc  darcy_checkerboard.prm  darcy_jumping.cc  darcy_polynomial.cc  darcy_polynomial.prm  test_coefficient_integrators.cc  test_darcy_estimator.cc  test_darcy_integrators.cc  test_darcy_solution_parameters.cc  test_solution_parameters.cc
testing/useage/: CMakeLists.txt  CTestTestfile.cmake  bar_useage.cc  foo_useage.cc
tests/: .gitignore  CMakeLists.txt  ac_01.cc  allen_cahn.cc  allen_cahn.prm  allen_cahn_polynomial.cc  cc_01.cc  da_01n.cc  da_02n.cc  ds_01.cc  he_01n.cc  heat.cc  la_01.cc  la_01n.cc  la_01u.cc  laplace_polynomial.cc  laplace_polynomial_newton.cc  laplace_polynomial_newton.prm  laplace_polynomial_umfpack.cc  options.prm  residual_darcy_01.cc  residual_laplace_01.cc  residual_stokes_01.cc  residual_theta.cc  residual_theta.prm  residual_theta_laplace_01.cc  st_01.cc  st_01bdm.cc  st_01n.cc  st_01u.cc  stokes_polynomial.cc  stokes_polynomial_newton.cc  stokes_polynomial_newton.prm  stokes_polynomial_umfpack.cc
