CMAKE_MINIMUM_REQUIRED(VERSION 2.8.8)
FIND_PACKAGE(deal.II 8.0 REQUIRED
  HINTS
  ${DEAL_II_DIR} ../ ../../ $ENV{DEAL_II_DIR})
DEAL_II_INITIALIZE_CACHED_VARIABLES()
PROJECT(amandus)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR} ${CMAKE_BINARY_DIR})

ADD_LIBRARY(amandus
  amandus.cc amandus_parameters.cc amandus_sparse.cc amandus_sparse_multigrid.cc)

DEAL_II_SETUP_TARGET(amandus)  

ADD_SUBDIRECTORY(allen_cahn)
ADD_SUBDIRECTORY(brusselator)
ADD_SUBDIRECTORY(maxwell)
ADD_SUBDIRECTORY(readiff)
ADD_SUBDIRECTORY(tests)
ADD_SUBDIRECTORY(doc)

OPTION(BUILD_TESTING "Build tests." ON)

IF(BUILD_TESTING)
  # enable ADD_TEST functionality
  ENABLE_TESTING()

  ADD_SUBDIRECTORY(testing)
ENDIF()


