
ADD_CUSTOM_TARGET(tests)

FILE(GLOB sources *.cc)
FILE(GLOB param RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/*.prm)

FOREACH(ccfile ${sources})
  GET_FILENAME_COMPONENT(file ${ccfile} NAME_WE)

  ADD_EXECUTABLE(${file} EXCLUDE_FROM_ALL ${ccfile})
  ADD_DEPENDENCIES(tests ${file})

  DEAL_II_SETUP_TARGET(${file})
  TARGET_LINK_LIBRARIES(${file} amandus)
ENDFOREACH()

FOREACH(prm ${param})
  CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/${prm}
    ${CMAKE_CURRENT_BINARY_DIR}/${prm} COPYONLY)
  ADD_DEPENDENCIES(tests ${prm})
ENDFOREACH()
